# erdio

./: .flake8  .gitignore  CHANGELOG  README.md  pyproject.toml
src/erdio/: __main__.py  cli.py  drawio.py  main.py  styles.py
