[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erdio"
version = "0.0.1"
authors = [
  { name="woodocat", email="woodocat@gmail.com" },
]
description = "CLI tool to convert DBML code to editable Draw.io diagram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pydbml>=1.0.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/woodocat/erdio"
"Bug Tracker" = "https://github.com/woodocat/erdio/issues"

[project.scripts]
erdio = "erdio.main:main"
